--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -16,7 +16,8 @@
     "enabled": true
   },
   "ai": {
-    "binding": "AI"
+    "binding": "AI",
+    "remote": true
   }
   /**
    * Smart Placement
