--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
 	},
 	"dependencies": {
 		"@opennextjs/cloudflare": "^1.3.0",
+		"@radix-ui/react-slot": "^1.2.3",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.544.0",
 		"next": "15.4.6",
 		"react": "19.1.0",
-		"react-dom": "19.1.0"
+		"react-dom": "19.1.0",
+		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
@@ -26,6 +31,7 @@
 		"eslint": "^9",
 		"eslint-config-next": "15.4.6",
 		"tailwindcss": "^4",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5",
 		"wrangler": "^4.40.0"
 	}
