chat boilerplate from vercel ai sdk

--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
 	},
 	"dependencies": {
+		"@ai-sdk/react": "^2.0.51",
 		"@opennextjs/cloudflare": "^1.3.0",
 		"@radix-ui/react-slot": "^1.2.3",
+		"ai": "^5.0.51",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.544.0",
 		"next": "15.4.6",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
-		"tailwind-merge": "^3.3.1"
+		"tailwind-merge": "^3.3.1",
+		"workers-ai-provider": "^2.0.0",
+		"zod": "^4.1.11"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
