--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
 	"dependencies": {
 		"@ai-sdk/react": "^2.0.51",
 		"@opennextjs/cloudflare": "^1.3.0",
+		"@radix-ui/react-checkbox": "^1.3.3",
+		"@radix-ui/react-progress": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"ai": "^5.0.51",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.544.0",
 		"next": "15.4.6",
+		"open-library-client": "^0.1.2",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"tailwind-merge": "^3.3.1",
